# AI-Final

./: .bazelignore  .gitignore  README.md  WORKSPACE.bazel  build_with_poetry.bzl  conda_environment.yaml  environment.yml  pnpm-lock.yaml  pnpm-workspace.yaml
bazel-ai-final/bazel-out/: stable-status.txt  volatile-status.txt
bazel-out/: volatile-status.txt
projects/backend/: BUILD.bazel  main.py
projects/frontend/: .prettierrc.cjs  BUILD.bazel  README.md  astro.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
projects/frontend/app/: layout.tsx  page.tsx
projects/frontend/src/components/: Plot.tsx
projects/frontend/src/layouts/: Layout.astro
projects/frontend/src/pages/: index.astro
projects/lib/: .gitignore  BUILD.bazel  FinanceData.py  LibAI.py  Preprocess.ipynb  Preprocess.py  Process.ipynb  README.md
projects/python/: BUILD.bazel  pyproject.toml
python/: README.md
web/: tsconfig.json
web/app/: layout.tsx
