load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Python rules
# https://github.com/bazelbuild/rules_python
http_archive(
    name = "rules_python",
    sha256 = "8c8fe44ef0a9afc256d1e75ad5f448bb59b81aba149b8958f02f7b3a98f5d9b4",
    strip_prefix = "rules_python-0.13.0",
    url = "https://github.com/bazelbuild/rules_python/archive/refs/tags/0.13.0.tar.gz",
)

# Conda rules
http_archive(
    name = "rules_conda",
    sha256 = "...",  # copy from release
    url = "...",  # copy from release
)

load("@rules_conda//:defs.bzl", "conda_create", "load_conda", "register_toolchain")

load_conda(
    install_mamba = True,
    quiet = False,
)

conda_create(
    name = "ai-final",
    environment = "@//:environment.yml",
    quiet = False,
)

register_toolchain(env = "ai-final")
