[tool.poetry]
name = "ai-final"
version = "0.1.0"
description = ""
authors = ["Thinline20 <thinline20@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_final"}]

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.1.3"
numpy = "^1.23.4"
pandas = "^1.5.1"
fastapi = "^0.85.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
